hacked some numbers to fix alignment

--- a/assets/css/lillvede.css
+++ b/assets/css/lillvede.css
@@ -31,8 +31,8 @@
 	background-size: cover !important;
 	background-repeat: no-repeat !important;
 	background-position: center !important;
-        margin-right: 1%;
-        margin-left: 1%;
+        margin-right: 0.975%;
+        margin-left: 0.975%;
 	margin-bottom: 2%;
 }
 
